# pykmymoney

./: .gitignore  README.md  README.rst  pyproject.toml
pykmymoney/: dashboard_app.py  kmmfile.py  kmy.py  util.py
tests/: test_pykmymoney.py
