[tool.poetry]
name = "pykmymoney"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "1.14.0"
pandas = "1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
line-profiler = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
